resume. index.html and CSS were updated

--- a/public/Lab-Files/Lesson02/Assignment/resume.html
+++ b/public/Lab-Files/Lesson02/Assignment/resume.html
@@ -15,7 +15,7 @@
 
     <h2>Summary of Qualifications</h2>
     <ul>
-        <li></li>
+        <li><a href="http://www.ctpcertified.com/" target="_blank">CompTIA CTP Certification</a></li>
         <li></li>
         <li></li>
         <li></li>
@@ -24,15 +24,22 @@
     <hr>
     <h2>Professional Experience</h2>
     <h3>Visual Network Solutions - Project Manager/Owner 2008-2017</h3>
-    <p>Installation and configuration of Exchange, AD and backup servers Manage Employee schedules and document all work with CRM Software (Connectwise) Install and program Allworx VOIP telephone systems Installation and configuration with Hosted PBX and
-        SIP Trunk’s Put together Proposals for submittal network, Submitting Port request for Customer port to Hosted PBX. Configuration and Installation of network switches and creating Network VLAN’s Configuring QOS.( Extreme, Adtran and HP). Installation
-        of Firewall appliances Perform cutovers for customers switching vendors or turning up new services. Turn up, install and troubleshoot T1, Fiber and PRI circuits. Install LAN from pulling cable to terminating jacks and MDF build out including LAN
-        and WAN troubleshooting Provide remote technical support for our MSP customers Troubleshoot Desktop PC’s and notebooks Changing computer hardware(drives motherboards etc.) Built our company website and have basic knowledge of HTML and CSS
-    </p>
+    <ul>
+        <li>Installation and configuration of Exchange, AD and backup servers.</li>
+        <li>Provide remote technical support for our MSP customers. Troubleshoot Desktop PC’s and notebooks.</li>
+        <li>Manage Employee schedules and document all work with CRM Software (Connectwise).</li>
+        <li>Configure and install Hosted and Allworx IP PBX. Program complex call rougting configurations. Site to Site connectivity.</li>
+        <li>Configure and install newtworing equipment. Programm VPN, QOS and VLAN tagging. Worked with HP, Extreme Networks, Adtran, Sonicwall switches and roudters.</li>
+        <li>Turn up, install and troubleshoot T1, Fiber and PRI circuits. Troubleshoot voice quality issues.</li>
+        <li>Putting together proposals for products and services. Gathering and Submitting Porting documentation for customer ports.</li>
+        <li>Install LAN cabling, test, termination and MDF build out including LAN and WAN troubleshooting.</li>
+        <li>Built our company website and built website for some cusotmers.</li>
+        <li>Design all company flyers, letterhead and branding.</li>
+
+    </ul>
     <hr>
     <h3>Communication Network Design - Lead Tech 2005-2008</h3>
-    <p>At CND I install and program Inter-Tel Phone systems: Inter-Tel 5000, Inter-Tel 5000 IP system, Inter-Tel 3000, and Inter-Tel Axxess. Installed T1/E1 cards, performed a 5200 to 5400 upgrade and also upgraded to a 5600. Attend customer and vender meets
-        to plan system install and system programming. Attended CTP course where I learned fundamental concepts, standards and practices related to converged networks. Perform cutovers for customers switching vendors or turning up new services. Turn up,
+    <p>   Attended CTP course where I learned fundamental concepts, standards and practices related to converged networks. Perform cutovers for customers switching vendors or turning up new services. Turn up,
         install and troubleshoot T1 and PRI circuits. Perform system version upgrades. Troubleshoot and do Adds, Moves and Changes on various PBX and key systems: Toshiba, Panasonic, Avaya Lucent, Samsung, Inter-Tel, NEC, ESI and Nortel. Set up and install
         routers and built VPN tunnels to remote sites. Install and program media gateways for VOIP environment. Install and setup POE Switches (Extreme, Adtran) Knowledge of ACD and UCD Install and setup Inter-Tel Enterprise Messaging and Inter-Tel Basic
         Voicemail. Setting up VM boxes and managing Voicemail accounts. Also worked on ESI Voice works, and Panasonic Panavoice. Assisted with IVR solution installation LAN and WAN troubleshooting Install LAN from pulling cable to terminating jacks and
@@ -41,6 +48,15 @@
         notebooks Assisted in server installs from installing server OS to mounting on racks and joining clients to the domain. Perform basic changes to the active directory. Setting up email accounts in Microsoft Exchange Assisted in server upgrade and
         migration from Windows Server 2000 to Windows Small Business Server 2003. Monitor network traffic for troubleshooting pc and phone issues.
     </p>
+    <ul>
+        <li>Install and program Inter-Tel Phone systems: Inter-Tel 5000, Inter-Tel 5000 IP system, Inter-Tel 3000, and Inter-Tel Axxess.</li>
+        <li>Installed T1/E1 cards, performed a 5200 to 5400 upgrade and also upgraded to a 5600.</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
     <hr>
     <h3>JWE Corp. - Installation Tech 2004-2005</h3>
     <p>
