--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,7 @@
         <header>
             <h1>SDA Workbook</h1>
         </header>
-
         <main>
-
             <h2>Lesson 2</h2>
             <h3>Challenges:</h3>
             <ul>
@@ -29,6 +27,11 @@
         <ul>
             <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
         </ul>
+        <h3>Lab 2</h3>
+        <ul>
+            <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Habitat - CCYP -syb.html</a></li>
+        </ul>
     </blockquote>
 </body>
+
 </html>
