worked on resume and index page

--- a/public/Lab-Files/Lesson02/Assignment/resume.html
+++ b/public/Lab-Files/Lesson02/Assignment/resume.html
@@ -15,11 +15,10 @@
 
     <h2>Summary of Qualifications</h2>
     <ul>
+        <li>Excellent project management, personal management and quality assurance skills.</li>
+        <li>Exceptional written and oral communication skills.</li>
+        <li>Demonstrated Ability to isolate, track, resolve and document technical and client issues.</li>
         <li><a href="http://www.ctpcertified.com/" target="_blank">CompTIA CTP Certification</a></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
     </ul>
     <hr>
     <h2>Professional Experience</h2>
@@ -28,45 +27,39 @@
         <li>Installation and configuration of Exchange, AD and backup servers.</li>
         <li>Provide remote technical support for our MSP customers. Troubleshoot Desktop PC’s and notebooks.</li>
         <li>Manage Employee schedules and document all work with CRM Software (Connectwise).</li>
-        <li>Configure and install Hosted and Allworx IP PBX. Program complex call rougting configurations. Site to Site connectivity.</li>
+        <li>Configure and install Hosted and premise IP PBX. Program complex call rougting configurations. Site to Site connectivity.</li>
         <li>Configure and install newtworing equipment. Programm VPN, QOS and VLAN tagging. Worked with HP, Extreme Networks, Adtran, Sonicwall switches and roudters.</li>
         <li>Turn up, install and troubleshoot T1, Fiber and PRI circuits. Troubleshoot voice quality issues.</li>
         <li>Putting together proposals for products and services. Gathering and Submitting Porting documentation for customer ports.</li>
         <li>Install LAN cabling, test, termination and MDF build out including LAN and WAN troubleshooting.</li>
+        <li>Installation and configuration enterprise wireless systems. Installation of Point to Point wilress bridge.</li>
         <li>Built our company website and built website for some cusotmers.</li>
         <li>Design all company flyers, letterhead and branding.</li>
 
     </ul>
     <hr>
     <h3>Communication Network Design - Lead Tech 2005-2008</h3>
-    <p>   Attended CTP course where I learned fundamental concepts, standards and practices related to converged networks. Perform cutovers for customers switching vendors or turning up new services. Turn up,
-        install and troubleshoot T1 and PRI circuits. Perform system version upgrades. Troubleshoot and do Adds, Moves and Changes on various PBX and key systems: Toshiba, Panasonic, Avaya Lucent, Samsung, Inter-Tel, NEC, ESI and Nortel. Set up and install
-        routers and built VPN tunnels to remote sites. Install and program media gateways for VOIP environment. Install and setup POE Switches (Extreme, Adtran) Knowledge of ACD and UCD Install and setup Inter-Tel Enterprise Messaging and Inter-Tel Basic
-        Voicemail. Setting up VM boxes and managing Voicemail accounts. Also worked on ESI Voice works, and Panasonic Panavoice. Assisted with IVR solution installation LAN and WAN troubleshooting Install LAN from pulling cable to terminating jacks and
-        MDF build out including installation of 19-inch racks dressing in cable and termination of data cabling. Running fiber optic and terminating fiber optic cable. Running cable and crossing in circuits in a Co-location environment Install and setup
-        Access system Install Emergency evacuation system in a Class 1 DEV 1 environment and integrated into phone system. Changing out parts on desktop and notebook computers: power supplies, motherboards, and sound cards. Troubleshoot Desktop PC’s and
-        notebooks Assisted in server installs from installing server OS to mounting on racks and joining clients to the domain. Perform basic changes to the active directory. Setting up email accounts in Microsoft Exchange Assisted in server upgrade and
-        migration from Windows Server 2000 to Windows Small Business Server 2003. Monitor network traffic for troubleshooting pc and phone issues.
-    </p>
     <ul>
         <li>Install and program Inter-Tel Phone systems: Inter-Tel 5000, Inter-Tel 5000 IP system, Inter-Tel 3000, and Inter-Tel Axxess.</li>
         <li>Installed T1/E1 cards, performed a 5200 to 5400 upgrade and also upgraded to a 5600.</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Turn up,install and troubleshoot T1, PRI and SIP circuits. Perform system version upgrades</li>
+        <li>Troubleshoot and do Adds, Moves and Changes on various PBX and key systems: Toshiba, Panasonic, Avaya Lucent, Inter-Tel, NEC and Nortel.</li>
+        <li>Set up and install routers, media gateways for VOIP environment,configure and install POE Switches (Extreme, Adtran)</li>
+        <li>Installation and termination of fiber optic cable, cat5 cabling. MDF buildout, installation of racks, patch panels, wire management and ladder tray.</li>
+        <li>Troubleshoot Desktop PC’s and notebooks Assisted in server installs from installing server OS to mounting on racks and joining clients to the domain.</li>
+        <li>Perform basic changes to the active directory. Setting up email accounts in Microsoft Exchange and Assisted in server upgrades and migrations.</li>
     </ul>
     <hr>
     <h3>JWE Corp. - Installation Tech 2004-2005</h3>
-    <p>
-        At JWE I installed finish trim in new residential housing. I had to order all material for the different phases and when the houses were ready I would go in and install all jack’s, all faceplates make sure that all the finish looked leveled and neat.
-        I also terminated and labeled the hubs in the homes. Dressed all cable in the hub terminated all the phone, data, and television. I also tested all the cables when the hubs were complete. I also had to trouble shoot and repair any shorts or cut
-        cables. I also installed home audio systems. Installed ceiling speakers and wall mounted speakers. Installed Russound volume controls and other distributive audio components including AH4-D, A-VC, and AKP-2’s., also had to test distributive audio
-        zones and the sound. Also installed outdoor speakers. Trimmed media centers for surround sound installing binding posts. I also installed alarm panels. I installed motion censors, sirens , keypads and door and window contacts for the alarm also
-        tested cables Installed vacuums inlets for the central vacuum system wired the power to the inlets. I also installed the vacuum motors in the garage and connecting the vacuum piping and the power to the vacuum motor. I also was scheduled for service
-        calls for vacuum, audio, and structure wiring.
-    </p>
+    <ul>
+        <li>Pull network cabling and terminated. Test and label all cabling and MDF.</li>
+        <li>Test and install voice equipment. Small PBX,and voicemail systems.</li>
+        <li>Build out MDF, dress in all cabling into racks and terminated on patch panels.</li>
+        <li>test and repair voice and data cabling. </li>
+        <li>Installation and termination of distributed audio (speakers, amplifiers, keypads).</li>
+        <li>Install and wired alarm panels. Installed motion censors, sirens, keypads and door/window contacts for the alarm.</li>
+        <li>Wired the power to the vacuum inlets for the central vacuum system. Install and test the vacuum motors.</li>
+    </ul>
     <hr>
     <h3>Ultimate Communications - Project Manager 2003-2004</h3>
     <ul>
