--- a/public/index.html
+++ b/public/index.html
@@ -8,30 +8,39 @@
 </head>
 
 <body>
-    <blockquote>
-        <!--type text here-->
-        <header>
-            <h1>SDA Workbook</h1>
-        </header>
-        <main>
-            <h2>Lesson 2</h2>
-            <h3>Challenges:</h3>
+    <div class="container">
+        <video autoplay="true" loop="loop">
+                    <source src="codevid.mp4"type="video/mp4">
+                    <source src="codevid.webm"type="video/webm">
+                </video>
+        <div class="text">SDA Workbook</div>
+    </div>
+    <div class="Content">
+        <blockquote>
+            <!--type text here-->
+            <header>
+                <h1>SDA Workbook</h1>
+            </header>
+            <main>
+                <h2>Lesson 2</h2>
+                <h3>Challenges:</h3>
+                <ul>
+                    <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
+                    <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
+                    <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenge - lists.html</a></li>
+                    <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenge - images.html</a></li>
+                </ul>
+            </main>
+            <h3>Assignments</h3>
             <ul>
-                <li><a href="Lab-Files/Lesson02/Challenges/blog-post.html">Lesson02 - Challenge - blog-post.html</a></li>
-                <li><a href="Lab-Files/Lesson02/Challenges/text-level-elements.html">Lesson02 - Challenge - text-level-elements.html</a></li>
-                <li><a href="Lab-Files/Lesson02/Challenges/lists.html">Lesson02 - Challenge - lists.html</a></li>
-                <li><a href="Lab-Files/Lesson02/Challenges/images.html">Lesson02 - Challenge - images.html</a></li>
+                <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
             </ul>
-        </main>
-        <h3>Assignments</h3>
-        <ul>
-            <li><a href="Lab-Files/Lesson02/Assignment/resume.html">Lesson02 - Assignment - resume.html</a></li>
-        </ul>
-        <h3>Lab 2</h3>
-        <ul>
-            <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Habitat - CCYP -syb.html</a></li>
-        </ul>
-    </blockquote>
+            <h3>Lab 2</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Habitat - CCYP -syb.html</a></li>
+            </ul>
+        </blockquote>
+    </div>
 </body>
 
 </html>
