--- a/public/lab-files/Lesson2/Challenges/images.html
+++ b/public/lab-files/Lesson2/Challenges/images.html
@@ -8,27 +8,35 @@
 
 </head>
 
-<body background: "https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/220px-Flag_of_Germany.svg.png"/>
-<main>
-    <h1><strong><u>The perfect trip</u></strong></h1>
+<body>
+    <main>
+        <h1><strong><u>The perfect trip</u></strong></h1>
 
-    <p>I would go to...</p>
-    <img src="http://www.operationworld.org/files/ow/maps/lgmap/germ-MMAP-md.png" alt="Germany" style="width:150px; height: 125px" />
+        <p>I would go to...</p>
+        <img src="http://www.operationworld.org/files/ow/maps/lgmap/germ-MMAP-md.png" alt="Germany" style="width:150px; height: 125px" />
 
-    <p>I would see scenes like...</p>
-    <img src="https://s-media-cache-ak0.pinimg.com/originals/ea/b6/5f/eab65f75be44f3e24c5a111a81e4e50f.jpg" alt="Brandeburg Gate" style="width:175px; height:100ox"></img>
-    <figcaption>Brandenburg Gate</figcaption>
+        <p>I would see scenes like...</p>
+        <img src="https://s-media-cache-ak0.pinimg.com/originals/ea/b6/5f/eab65f75be44f3e24c5a111a81e4e50f.jpg" alt="Brandeburg Gate" style="width:175px; height:100px" /><br> Brandenburg Gate
+        <br>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Cologne_cathedrale_vue_sud.jpg/293px-Cologne_cathedrale_vue_sud.jpg" alt="Cologne Cathedral" style="width:175px; height: 125px" /><br> Cologne Cathedral
+        <br>
+        <img src="https://media.wplm.pl/pictures/825/upscale_True/path/wp/photo/2013-07/600/450/auschwitz-birkenau-main_track.jpg" alt="Entrance to Aushwitz Concentration Camp" style="width: 175px; height: 125px" /> <br> Entrance to Aushwitz Concentration
+        Camp
+        <br>
+
+
+        <p>And do things like...</p>
+        <img src="http://media.crossingtravel.com/files/van.anh/2015/11/14/oktoberfest-in-germany-1447.jpg " alt="Oktoberfest in Germany" style="width: 175px; height: 100px" /> <br> Oktoberfest in Germany
+        <br>
+        <img src="https://media-cdn.tripadvisor.com/media/photo-s/02/3e/d8/0e/locks-of-love-on-hohenzollern.jpg" alt="Locks of Love on Hohensollern " style=" width: 175px; height: 100px " /><br> Visit Locks of Love on Hohensollern
+        <br>
+
+
+
+
+    </main>
     <br>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/03/Cologne_cathedrale_vue_sud.jpg/293px-Cologne_cathedrale_vue_sud.jpg" alt="Cologne Cathedral" style="width:175px; height: 125px"></img>
-    <figcaption>Cologne Cathedral</figcaption>
-    <br>
-    <img src="https://media.wplm.pl/pictures/825/upscale_True/path/wp/photo/2013-07/600/450/auschwitz-birkenau-main_track.jpg" alt="Entrance to Aushwitz Concentration Camp" style="width: 175px; height: 125px"><img>
-    <figcaption></figcaption>Entrance to Aushwitz Concentration Camp</figcaption>
 
-    <p>And do things like...</p>
-</main>
-
-<a href="/">Back</a>
 </body>
 
 </html>
