--- a/public/lab-files/Lesson2/Challenges/lists.html
+++ b/public/lab-files/Lesson2/Challenges/lists.html
@@ -8,7 +8,7 @@
 
 <body>
     <a href="/">Back</a>
-    <h1>Thing's I want to learn:</h1>
+    <h1>Things I want to learn:</h1>
     <ul>
         <li>How to crochet.</li>
         <li>How to create phone applications.</li>
