--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     </ul>
 
     <!--Lesson 3-->
-    <h2><u>Lesson 3</u>
+    <h2><u>Lesson 3</u></h2>
     <h3>~Challenges~</h3>
     <ul>
         <li><a href="lab-files/Lesson3/Challenges/applesandbananas.html">Apples and Bananas</a></li>
