--- a/public/Lab-Files/Lesson02/Assignment/resume.html
+++ b/public/Lab-Files/Lesson02/Assignment/resume.html
@@ -18,6 +18,7 @@
         <li>Excellent project management, personal management and quality assurance skills.</li>
         <li>Exceptional written and oral communication skills.</li>
         <li>Demonstrated Ability to isolate, track, resolve and document technical and client issues.</li>
+        <li>Work well independently or in a group setting providing all facets of computer support such as troubleshooting, installations, and maintenance.</li>
         <li><a href="http://www.ctpcertified.com/" target="_blank">CompTIA CTP Certification</a></li>
     </ul>
     <hr>
@@ -63,11 +64,13 @@
     <hr>
     <h3>Ultimate Communications - Project Manager 2003-2004</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Oversee Network Install projects, manage crews work and complete phases of project by scheduled time.</li>
+        <li>Blueprint reading and filling out detailed daily activity reports. Keep time of hours worked by the crew.</li>
+        <li>Installation and termination of fiber optic, cat5, OSP and cat3 cabling. MDF buildout, installation of racks, patch panels, wire management and ladder tray.</li>
+        <li>Testing and certifying networks with an Agilent Technologies Wire Scope 350. Troubleshooting and fixing cat3 and category 5 cabling.</li>
+        <li>Installed a Kentech KT-300 entry system. Pulled cable for the entry system and installed door strikes and entry keypads.</li>
+        <li>Installed CCTV system, setup camera mounts, camera housing, conduit and all cabling for the cameras.</li>
+        <li>Installed cameras adjusted and focused cameras. Installed monitor and multiplexer for the CCTV system.</li>
     </ul>
 </body>
 
