added new challenges

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
     <h2>Lesson 3</h2>
     <h3>Assignments</h3>
         <ul>
-            <li></li>
+            <li>
+                <a href="https://campbell20.github.io/portfolio/blog.html">Blog Example</a>
+            </li>
         </ul>
     <h3>Labs</h3>
          <ul>
@@ -40,7 +42,15 @@
         </ul>
     <h3>Challenges</h3>
         <ul>
-            <li></li>
+            <li>
+                <a href="/Lab-Files/Lesson3/Challenges/wild-animal.html">Wild Animal</a>
+            </li>
+            <li>
+                <a href="/Lab-Files/Lesson3/Challenges/apples-bananas.html">Apples-Bananas</a>
+            </li>
+             <li>
+                <a href="/Lab-Files/Lesson3/Challenges/box-positioning.html">Box Positioning</a>
+            </li>
         </ul>
     </div>
 </body>
