--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <h2><u>Lesson 2</u></h2>
     <h3>~Challenges~</h3>
     <ul>
-        <li><a href="lab-files/Lesson2/Challenges/blog.html">Blog </a></li>
+        <li><a href="https://anicolewagner.github.io/portfolio/">Blog </a></li>
         <li><a href="lab-files/Lesson2/Challenges/text-level-elements.html">Text Level Elements</a></li>
         <li><a href="lab-files/Lesson2/Challenges/images.html">Images</a></li>
         <li><a href="lab-files/Lesson2/Challenges/lists.html">Lists</a></li>
@@ -28,7 +28,7 @@
     <ul>
         <li><a href="lab-files/Lesson3/Challenges/applesandbananas.html">Apples and Bananas</a></li>
         <li><a href="lab-files/Lesson3/Challenges/favoritewildanimal.html">Favorite Wild Animal</a></li>
-        <li><a href="lab-files/Lesson3/Challenges/positioning.html">Positioning</a></li>
+        <li><a href="lab-files/Lesson3/Challenges/box-positioning.html">Positioning</a></li>
     </ul>
 </body>
 
