--- a/public/lab-files/Lesson2/Assignments/resume.html
+++ b/public/lab-files/Lesson2/Assignments/resume.html
@@ -30,29 +30,60 @@
         <h2>Texas Department of Health and Human Services</h2>
         <h3>March, 2016 to Present</h3>
         <h3>Texas Works Advisor II</h3>
-            <ul>
-                <li>Obtains, verifies, and calculates income and resources to determine client financial eligibility.</li>
-                <li>Interviews clients or authorized representative to gather information to determine eligibility for benefits.</li>
-                <li>Conducts reviews to determine or verify eligibility or continued eligibility and benefit level.</li>
-                <li>Processes changes to client status, overpayments, and adjusts or restores benefits.</li>
-                <li>Documents case records using automated equipment to form a record for each client.</li>
-                <li>Communicates on an intermediate level with others (internally or externally) to provide, exchange, or verify information, answer inquiries, address issues, or resolve problems or complaints</li>
-            </ul>
+        <ul>
+            <li>Obtains, verifies, and calculates income and resources to determine client financial eligibility.</li>
+            <li>Interviews clients or authorized representative to gather information to determine eligibility for benefits.</li>
+            <li>Conducts reviews to determine or verify eligibility or continued eligibility and benefit level.</li>
+            <li>Processes changes to client status, overpayments, and adjusts or restores benefits.</li>
+            <li>Documents case records using automated equipment to form a record for each client.</li>
+            <li>Communicates on an intermediate level with others (internally or externally) to provide, exchange, or verify information, answer inquiries, address issues, or resolve problems or complaints</li>
+        </ul>
         <br>
         <h2>Communities in Schools</h2>
         <h3>August, 2015 to February, 2016</h3>
         <h3>Site Coordinator - Adams Elementary School</h3>
         <br>
+        <ul>
+            <li>Completed a campus needs assessment by identified services available and gaps in needed services.</li>
+            <li>Developed a Campus Service Delivery Plan (CSDP) to address site-specific needs and targets students facing obstacles that impact academic, behavior, attendance and social service needs.</li>
+            <li>Collaborated with appropriate school staff that focus on student support services.</li>
+            <li>Provided CIS-SA orientation and training for school staff.</li>
+            <li>Collaborated with principal and appropriate student support staff to target at-risk students for case management and collect recommendation forms.</li>
+            <li>Communicated with school principal or designee on a regular basis to seek input and report on program progress.</li>
+            <li>Monitored and document student progress toward goals.</li>
+            <li>Gathered administrator, parent and student feedback regarding program implementation.</li>
+            <li>Evaluated campus programming effectiveness.</li>
+        </ul>
+
         <h2>Bair Foundation</h2>
-            <h3>July, 2013 to July, 2014</h3>
-            <h3>Foster Parent Supervisor</h3>
-            <br>
-            <h2>Texas Department of Family and Protective Services</h2>
-            <h3>April, 2008 to July, 2012</h3>
-            <h3>Child Abuse and Neglect Investigator IV</h3>
+        <h3>July, 2013 to July, 2014</h3>
+        <h3>Foster Parent Supervisor</h3>
+        <br>
+        <ul>
+            <li>Applies advanced knowledge of foster care to independently determine the quality and appropriateness of services being provided to each child in placement.</li>
+            <li>Applies advanced knowledge of foster care to write Individualized Services Plans (ISP) to establish the appropriate services to be provided for each child in placement and to assure compliance with state regulations. </li>
+            <li>Exercises independent judgment in deciding the most effective services needed to benefit the child and communicates those decisions to the foster family/kinship family, the school, the referral agency and community resources.</li>
+            <li>Applies knowledge of foster care to train foster/kinship homes and certify eligibility to provide foster care. </li>
+            <li>Responsible for monitoring progress of children in the home setting.</li>
+            <li>Teaches foster/kinship parents techniques to help reduce intensity and frequency of negative behaviors in children.</li>
+        </ul>
+
+        <h2>Texas Department of Family and Protective Services</h2>
+        <h3>April, 2008 to July, 2012</h3>
+        <h3>Child Abuse and Neglect Investigator IV</h3>
+        <br>
+        <ul>
+            <li>Investigated referrals/complaints relative to alleged child abuse and/or neglect.</li>
+            <li>Conducted in depth interviews with adults and children associated with a referral/complaint. </li>
+            <li>Have discussions in a direct and objective manner with families related to income, money management, sex abuse, and personal relationships.</li>
+            <li>Identified current and future risk within the family and take necessary measures to protect children. Includes removing children from their family. </li>
+            <li>Provide testimony in court cases.</li>
+            <li>Documented written reports within the case record by completing forms, narratives and reports. </li>
+        </ul>
+
     </div>
 
-<a href="/">Back to Home</a>
+    <a href="/">Back to Home</a>
 </body>
 
 </html>
