--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <head>
-    <link type="text/css" rel="stylesheet" href="/main.css"/>
+    <link type="text/css" rel="stylesheet" href="main.css"/>
 
 </head>
 
