--- a/public/Lab-Files/Lesson3/Challenges/box-positioning.html
+++ b/public/Lab-Files/Lesson3/Challenges/box-positioning.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Box Positioning</title>
-    <link rel="stylesheet" href="Lab-Files/Lesson3/Challenges/box-positioning.css" />
+    <link rel="stylesheet" href="box-positioning.css" />
 </head>
 <body>
             <div class="boxes box1">
