fixed box challange and index.html page

--- a/public/Lab-Files/Lesson03/Challenges/apples-bananas.html
+++ b/public/Lab-Files/Lesson03/Challenges/apples-bananas.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <a href="/">Back</a>
     <h1><strong class="apples">Apples</strong> and <strong class="bananas">Bananas</strong></h1>
     <p>
         I like to eat eat eat
