--- a/public/Lab-Files/Lesson03/Challenges/box-positioning.html
+++ b/public/Lab-Files/Lesson03/Challenges/box-positioning.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <a href="/">Back</a>
     <div class="box">Box 1</div>
     <div class="box">Box 2</div>
     <div class="box">Box 3</div>
