--- a/public/Lab-Files/Lesson03/Challenges/wild-animal.html
+++ b/public/Lab-Files/Lesson03/Challenges/wild-animal.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    <a href="/">Back</a>
     <h1>The coolest creature</h1>
     <p><img src="http://bit.ly/2mtA6V6" alt="http://bit.ly/2rqUA4A">The <em></em> is awesome because <strong></strong>.The lion (<em>Panthera leo</em>) is one of the big cats in the genus Panthera and a member of the family Felidae. The commonly used term
         African lion collectively denotes the several subspecies in Africa. With some males exceeding <strong>250 kg (550 lb)</strong> in weight,[5] it is the second-largest living cat after the tiger, barring hybrids like the liger.[6][7] Wild lions
