--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
 
 <body>
     <div class="container">
-        <video autoplay="true" loop="loop">
-                    <source src="codevid.mp4"type="video/mp4">
-                    <source src="codevid.webm"type="video/webm">
+        <video autoplay loop="loop">
+                    <source src="codevid.mp4" type="video/mp4">
+                    <source src="codevid.webm" type="video/webm">
                 </video>
         <div class="text">SDA Workbook</div>
     </div>
@@ -39,17 +39,17 @@
             <ul>
                 <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Habitat - CCYP -syb.html</a></li>
             </ul>
-            <h2>Lesson03</h2>
-              <h2>Lesson 3</h2>
-                <h3>Challenges:</h3>
-                <ul>
-                    <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenge - wild-animal.html</a></li>
-                    <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Lesson03 - Challenge - apples-bananas.html</a></li>
-                    <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenge - box-positioning.html</a></li>
+            <h2>Lesson 3</h2>
+            <h3>Challenges:</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenge - wild-animal.html</a></li>
+                <li><a href="Lab-Files/Lesson03/Challenges/apples-bananas.html">Lesson03 - Challenge - apples-bananas.html</a></li>
+                <li><a href="Lab-Files/Lesson03/Challenges/box-positioning.html">Lesson03 - Challenge - box-positioning.html</a></li>
+            </ul>
             <h3>Assignments</h3>
-                <ul>
-                    <li><a href="https://george-perez.github.io/portfolio/blog.html">Lesson03 - Blog Page</a></li>
-                </ul>
+            <ul>
+                <li><a href="https://george-perez.github.io/portfolio/blog.html">Lesson03 - Blog Page</a></li>
+            </ul>
         </blockquote>
     </div>
 </body>
