--- a/public/index.html
+++ b/public/index.html
@@ -6,21 +6,28 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
-
+mkdir
 <body>
+
+    <!--- header video and logo --->
     <div class="container">
+        <div>
+            <a href="/" title="return to homepage" class="logo">
+                <image src="/logo.png" alt="Website Logo"/>
+            </a>
+        </div>
         <video autoplay loop="loop">
-                    <source src="codevid.mp4" type="video/mp4">
-                    <source src="codevid.webm" type="video/webm">
-                </video>
-        <div class="text">SDA Workbook</div>
+            <source src="codevid.mp4" type="video/mp4">
+            <source src="codevid.webm" type="video/webm">
+        </video>
     </div>
+    <!--- End of header video and logo --->
     <div class="Content">
         <blockquote>
             <!--type text here-->
             <header>
                 <h1>SDA Workbook</h1>
-                <hr>
+                <hr/>
             </header>
             <main>
                 <h2>Lesson 2</h2>
@@ -40,8 +47,8 @@
             <ul>
                 <li><a href="Lab-Files/Lesson02/Habitat/CCYP/syb.html">Lesson02 - Habitat - CCYP -syb.html</a></li>
             </ul>
+            <hr/>
             <h2>Lesson 3</h2>
-            <hr>
             <h3>Challenges:</h3>
             <ul>
                 <li><a href="Lab-Files/Lesson03/Challenges/wild-animal.html">Lesson03 - Challenge - wild-animal.html</a></li>
@@ -51,6 +58,10 @@
             <h3>Assignments</h3>
             <ul>
                 <li><a href="https://george-perez.github.io/portfolio/blog.html">Lesson03 - Blog Page</a></li>
+            </ul>
+            <h3>Lab 3</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html">Lesson03 - Habitat - CCYP -syb.html</a></li>
             </ul>
         </blockquote>
     </div>
