added personal logo

--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="index.css" type="text/css" />
 </head>
-mkdir
-<body>
 
-    <!--- header video and logo --->
-    <div class="container">
-        <div>
-            <a href="/" title="return to homepage" class="logo">
-                <image src="/logo.png" alt="Website Logo"/>
-            </a>
+<body>
+    <!-- header video and logo -->
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Website Logo" />
         </div>
-        <video autoplay loop="loop">
-            <source src="codevid.mp4" type="video/mp4">
-            <source src="codevid.webm" type="video/webm">
-        </video>
-    </div>
-    <!--- End of header video and logo --->
+        <div>
+            <div class="container">
+                <video autoplay loop="loop">
+                    <source src="codevid.mp4" type="video/mp4">
+                    <source src="codevid.webm" type="video/webm">
+                </video>
+            </div>
+        </div>
+    </header>
+    <!-- End of header video and logo -->
     <div class="Content">
         <blockquote>
             <!--type text here-->
