Lesson4 box challange

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,19 @@
             <ul>
                 <li><a href="Lab-Files/Lesson03/Habitat/CCYP/syb.html">Lesson03 - Habitat - CCYP -syb.html</a></li>
             </ul>
+            <hr/>
+            <h2>Lesson 4</h2>
+            <h3>Challenges:</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenge - box-model.html</a></li>
+            </ul>
         </blockquote>
     </div>
+    <footer>
+        <div class=<div class="footContainer"></div>>
+            <p>Ths is the footer of my page.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
