added flag page

--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,9 @@
             <li>
                  <a href="Lab-Files/Lesson4/Challenges/box-model.html">Box Model</a>
             </li>
+            <li>
+                 <a href="Lab-Files/Lesson4/Challenges/flexbox-flags.html">Flexbox Flags</a>
+            </li>
         </ul>
     </div>
     
