--- a/public/Lab-Files/Lesson4/Challenges/flexbox-flags.html
+++ b/public/Lab-Files/Lesson4/Challenges/flexbox-flags.html
@@ -5,46 +5,52 @@
     <meta charset="UTF-8">
     <title>Flexbox Flags Challenge</title>
     <link rel="stylesheet" href="flexbox-flags.css" />
-
 </head>
 
 <body>
-    <div class="flags">
-        <div class="horizontial-container">
-            <div class="german-flag-color1"></div>
-            <div class="german-flag-color2"></div>
-            <div class="german-flag-color3"></div>
-            <div class="flagname">German Flag</div>
-        </div>
+    <!--This container contains all of the flags-->
+    <div class="content-container">
 
+        <!--the German Flag-->
         <div class="horizontial-container">
-            <div class="vertical-container">
-                <div class="italy-flag-color1"></div>
-                <div class="italy-flag-color2"></div>
-                <div class="italy-flag-color3"></div>
+            <div class="horizontialflag-container">
+                <div class="german-colors"></div>
+                <div class="german-colors"></div>
+                <div class="german-colors"></div>
             </div>
-            <div class="flagname">Italian Flag</div>
+            <div class="flagname-container">German Flag</div>
         </div>
 
+        <!--the Italian Flag-->
         <div class="horizontial-container">
-            <div class="vertical-container">
-                <div class="france-flag-color1"></div>
-                <div class="france-flag-color2"></div>
-                <div class="france-flag-color3"></div>
+            <div class="verticalflag-container">
+                <div class="italy-colors"></div>
+                <div class="italy-colors"></div>
+                <div class="italy-colors"></div>
             </div>
-            <div class="flagname">French Flag</div>
+            <div class="flagname-container">Italian Flag</div>
         </div>
 
-
+        <!--the French Flag-->
         <div class="horizontial-container">
-            <div class="colombia-flag-color1"></div>
-            <div class="colombia-flag-color2"></div>
-            <div class="colombia-flag-color3"></div>
-            <div class="flagname">Colombian Flag</div>
+            <div class="verticalflag-container">
+                <div class="france-colors"></div>
+                <div class="france-colors"></div>
+                <div class="france-colors"></div>
+            </div>
+            <div class="flagname-container">French Flag</div>
         </div>
 
+        <!--the Colombian Flag-->
+        <div class="horizontial-container">
+            <div class="horizontialflag-container">
+                <div class="colombia-colors"></div>
+                <div class="colombia-colors"></div>
+                <div class="colombia-colors"></div>
+            </div>
+            <div class="flagname-container">Colombian Flag</div>
+        </div>
     </div>
-
 </body>
 
 </html>
