--- a/public/Lab-Files/Lesson4/Challenges/flexbox-flags.html
+++ b/public/Lab-Files/Lesson4/Challenges/flexbox-flags.html
@@ -12,7 +12,7 @@
     <div class="content-container">
 
         <!--the German Flag-->
-        <div class="horizontial-container">
+        <div class="flagandflagname-container">
             <div class="horizontialflag-container">
                 <div class="german-colors"></div>
                 <div class="german-colors"></div>
@@ -22,7 +22,7 @@
         </div>
 
         <!--the Italian Flag-->
-        <div class="horizontial-container">
+        <div class="flagandflagname-container">
             <div class="verticalflag-container">
                 <div class="italy-colors"></div>
                 <div class="italy-colors"></div>
@@ -32,7 +32,7 @@
         </div>
 
         <!--the French Flag-->
-        <div class="horizontial-container">
+        <div class="flagandflagname-container">
             <div class="verticalflag-container">
                 <div class="france-colors"></div>
                 <div class="france-colors"></div>
@@ -42,7 +42,7 @@
         </div>
 
         <!--the Colombian Flag-->
-        <div class="horizontial-container">
+        <div class="flagandflagname-container">
             <div class="horizontialflag-container">
                 <div class="colombia-colors"></div>
                 <div class="colombia-colors"></div>
