--- a/public/Lab-Files/Lesson04/Challenges/box-model.html
+++ b/public/Lab-Files/Lesson04/Challenges/box-model.html
@@ -6,9 +6,10 @@
     <title>Box-Model Challenge</title>
     <link rel="stylesheet" href="box-model.css" type="text/css" />
 </head>
+<a href="/..">Back</a>
 
 <body>
-    <a href="/">Back</a>
+    <a href="/index.html">Back</a>
     <div class="box box1">Box 1</div>
     <div class="box box2">Box 2</div>
     <div class="box box3">Box 3</div>
@@ -18,3 +19,4 @@
 </body>
 
 </html>
+got
