added link on index.html for Flag

--- a/public/index.html
+++ b/public/index.html
@@ -69,14 +69,10 @@
             <h3>Challenges:</h3>
             <ul>
                 <li><a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenge - box-model.html</a></li>
+                <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenge - flexbox-flags.html</a></li>
             </ul>
         </blockquote>
     </div>
-    <footer>
-        <div class=<div class="footContainer"></div>>
-            <p>Ths is the footer of my page.</p>
-        </div>
-    </footer>
 </body>
 
 </html>
