changed link in flags

--- a/public/Lab-Files/Lesson04/Challenges/flexbox-flags.html
+++ b/public/Lab-Files/Lesson04/Challenges/flexbox-flags.html
@@ -6,7 +6,7 @@
     <title>Flexbox Flags Challenge</title>
     <link rel="stylesheet" href="flexbox-flags.css" type="text/css" />
 </head>
-<a href="/..">Back</a>
+<a href="../../../index.html">Back</a>
 <body>
     <div class="flag germany-flag">
         <div class="color1"></div>
