--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,16 @@
         <li><a href="lab-files/Lesson3/Challenges/favoritewildanimal.html">Favorite Wild Animal</a></li>
         <li><a href="lab-files/Lesson3/Challenges/box-positioning.html">Positioning</a></li>
     </ul>
+    
+    <!--Lesson 4-->
+    <h2><u> Lesson 3</u></h2>
+    <h3>~Challenges~</h3>
+    <ul>
+        <li><a href="lab-files/Lesson4/Challenges/box-model.html">Box Model</a></li>
+        <li><a href="lab-files/Lesson4/Challenges/flexbox-flags.html">Flexbox Flags</a></li>
+    </ul>
+    
+    <!--Lesson 5-->
 </body>
 
 
