--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,8 @@
             <ul>
                 <li><a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenge - box-model.html</a></li>
                 <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenge - flexbox-flags.html</a></li>
+                <li><a href="https://george-perez.github.io/lesson4_challenge_day1/">Lesson04 - Challenge - Day1.html</a></li>
+                <li><a href="https://george-perez.github.io/lesson4_challenge_day2/">Lesson04 - Challenge - Day2.html</a></li>
             </ul>
         </blockquote>
     </div>
