fixed broken links

--- a/public/index.html
+++ b/public/index.html
@@ -68,10 +68,10 @@
             <h2>Lesson 4</h2>
             <h3>Challenges:</h3>
             <ul>
-                <li><a href="{{ site.github.url }}Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenge - box-model.html</a></li>
-                <li><a href="{{ site.github.url }}Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenge - flexbox-flags.html</a></li>
-                <li><a href="{{ site.github.url }}/lesson4_challenge_day1/index.html/">Lesson04 - Challenge - Day1.html</a></li>
-                <li><a href="{{ site.github.url }}/lesson4_challenge_day2/index.html">Lesson04 - Challenge - Day2.html</a></li>
+                <li><a href="Lab-Files/Lesson04/Challenges/box-model.html">Lesson04 - Challenge - box-model.html</a></li>
+                <li><a href="Lab-Files/Lesson04/Challenges/flexbox-flags.html">Lesson04 - Challenge - flexbox-flags.html</a></li>
+                <li><a href="https://george-perez.github.io/lesson4_challenge_day1/">Lesson04 - Challenge - Day1.html</a></li>
+                <li><a href="https://george-perez.github.io/lesson4_challenge_day2/">Lesson04 - Challenge - Day2.html</a></li>
             </ul>
         </blockquote>
     </div>
