Completed Lesson4 Challenges

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>KellyLampkin-ToC-SACA-Web101</title>
    </head>
 <body>
     <header>
@@ -54,6 +54,24 @@
      </ul>
 	 -->
 	 
+   <h2> Lesson 4</h2>
+
+     <!-- Challenges Section-->
+         <h3>Challenges</h3>
+    <ul>
+        <li><a href="Lab-Files/Lesson4/Challenges/box-model.html">Lesson04_Challenge:  Box-Model Day 1</a></li>
+        <li><a href="Lab-Files/Lesson4/Challenges/flexbox-flags.html">Lesson04_Challenge: Flexbox Flags Day 2</a></li>
+        <li><a href="Lab-Files/Lesson4/Challenges/team-project-day1.html">Lesson04_Challenge: Team Project Day 1</a></li>
+        <li><a href="Lab-Files/Lesson4/Challenges/team-project-day2.html">Lesson04_Challenge: Team Project Day 2</a></li>
+    </ul>
+
+      <!-- Labs Section
+    <h3>Labs</h3>
+    <ul>
+        <li><a href=" ">Lesson04_Labs: CIW-Lesson4-Lab</a></li>
+     </ul>
+-->
+   
    
 </body>
 
