lesson5 day 2 challenge

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,11 @@
                 <li><a href="Lab-Files/Lesson04/Lab/Habitat/CCYP/syb.html">Lesson03 - Habitat - CCYP -syb.html</a></li>
             </ul>
             <hr/>
+            <h2>Lesson05</h2>
+            <h3>Challenges:</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson05/Challenges/team-project-day2.html">Lesson05 - Challenge - Day2.html</a></li>
+            </ul>
         </blockquote>
     </div>
 </body>
