add lesson5 day1

--- a/public/index.html
+++ b/public/index.html
@@ -81,6 +81,7 @@
             <h2>Lesson05</h2>
             <h3>Challenges:</h3>
             <ul>
+                <li><a href="Lab-Files/Lesson05/Challenges/team-project-day1.html">Lesson05 - Challenge - Day1.html</a></li>
                 <li><a href="Lab-Files/Lesson05/Challenges/team-project-day2.html">Lesson05 - Challenge - Day2.html</a></li>
             </ul>
         </blockquote>
