--- a/public/index.html
+++ b/public/index.html
@@ -84,6 +84,10 @@
                 <li><a href="Lab-Files/Lesson05/Challenges/team-project-day1.html">Lesson05 - Challenge - Day1.html</a></li>
                 <li><a href="Lab-Files/Lesson05/Challenges/team-project-day2.html">Lesson05 - Challenge - Day2.html</a></li>
             </ul>
+             <h3>Lab 5</h3>
+            <ul>
+                <li><a href="Lab-Files/Lesson05/Challenges/Habitat/CCYP/syb_day.html">Lesson05 - Habitat - CCYP -syb_day.html</a></li>
+            </ul>
         </blockquote>
     </div>
 </body>
